:recycle: refactor ResponsiveContext + :bug: fix UI issue on mobile devices

--- a/packages/base/components/default/Navbar/Navbar.module.scss
+++ b/packages/base/components/default/Navbar/Navbar.module.scss
@@ -6,7 +6,7 @@
 	top: 0;
 
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-end;
 
 	width: 100%;
 
@@ -14,6 +14,18 @@
 
 	@include md() {
 		padding: 2rem;
+	}
+
+	& h1 {
+		display: none;
+	}
+
+	@include sm() {
+		justify-content: space-between;
+
+		& h1 {
+			display: initial;
+		}
 	}
 }
 
